--- a/templates/Makefile
+++ b/templates/Makefile
@@ -1,13 +1,8 @@
 # Board settings.
-BOARD = uno
-PORT = /dev/ttyACM0
-# For Arduino 1.0
-PROGRAMMER = arduino
+BOARD_TAG = uno
+MONITOR_PORT = /dev/ttyACM0
 
 # Which header files and libraries to use
 LIBS = SoftwareSerial SPI
-# Which user-defined libraries to use
-# By default these should appear in ~/sketchbook/libraries
-CUSTOM_LIBS = RFM22
 
-include $(HOME)/.vim/bundle/vim-arduino/templates/master.mk
+include $(HOME)/.vim/bundle/vim-arduino/Makefile/arduino-mk/Arduino.mk
